[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/charger.png" type="Texture" id=1]
[ext_resource path="res://src/characters/Charger.gd" type="Script" id=2]
[ext_resource path="res://src/UI/Damage_Flicker.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 24, 31 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 27, 32 )

[sub_resource type="CircleShape2D" id=8]
radius = 519.001

[node name="Charger" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "walking"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -1, 0 )
shape = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Activation" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Activation"]
shape = SubResource( 8 )

[node name="Damage_Flicker" parent="." instance=ExtResource( 3 )]
modulate = Color( 1, 0, 0, 0.533333 )
margin_left = -19.0
margin_top = -27.0
margin_right = 21.0
margin_bottom = 18.0
total_time = 0.5
flicker_time = 0.1

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Activation" to="." method="_on_Activation_body_entered"]
